@@ -24,7 +24,7 @@ use warnings ;
 use Config::Model::Exception ;
 use Log::Log4perl qw(get_logger :levels);
 
-our $VERSION="1.202";
+our $VERSION="1.203";
 
 my $logger = get_logger("Loader") ;
 
@@ -540,7 +540,7 @@ sub _load_list {
 
 sub _load_hash {
     my ($self,$node,$experience,$inst,$cmdref,$target_ref) = @_ ;
-    my ($element_name,$action,$id,$subaction,$value) = @$inst ;
+    my ($element_name,$action,$id,$subaction,$value,$note) = @$inst ;
 
     my $element = $node -> fetch_element($element_name) ;
     my $cargo_type = $element->cargo_type ;
@@ -600,11 +600,15 @@ sub _load_hash {
 	unquote ($id) ;
 	return $self->_load($obj, $experience, $cmdref);
     }
-    elsif ($action eq ':' and $cargo_type =~ /leaf/) {
+    elsif ($action eq ':' and defined $subaction and $cargo_type =~ /leaf/) {
 	$logger->debug("_load_hash: calling _load_value on leaf $id");
 	unquote($id,$value) ;
 	$self->_load_value($obj,$subaction,$value)
 	  and return 'ok';
+    }
+    elsif ($action eq ':' and defined $note) {
+	# action was just to store annotation
+	return 'ok';
     }
     elsif ($action) {
 	Config::Model::Exception::Load
