@@ -46,13 +46,14 @@ ok($root,"Config root created") ;
 
 my $step = 'std_id:ab X=Bv - std_id:bc X=Av - a_string="toto tata" '
   .'lista=a,b,c,d olist:0 X=Av - olist:1 X=Bv - listb=b,c,d '
-    . '! hash_a:X2=x hash_a:Y2=xy  hash_b:X3=xy my_check_list=X2,X3' ;
+    . '! hash_a:X2=x hash_a:Y2=xy hash_a:toto#"index comment"
+        hash_b:X3=xy my_check_list=X2,X3' ;
 ok( $root->load( step => $step, permission => 'intermediate' ),
   "set up data in tree with '$step'");
 
 my @annotate = map { [ $_ => "$_ annotation" ] }
   ('std_id','std_id:bc X','my_check_list') ;
-my %expect ;
+my %expect = ( 'hash_a:toto' => "index comment");
 
 foreach (@annotate) {
     my ($l,$a) = @$_ ;
@@ -105,6 +106,7 @@ my $h2_ref = $saver2->get_annotation_hash() ;
 print Dumper ( $h2_ref ) if $trace ;
 my %expect2 = %expect ;
 delete $expect2{'std_id:bc X'} ;
+delete $expect2{'hash_a:toto'} ;
 
 is_deeply ($h2_ref,\%expect2 ,"check loaded annotation data with empty tree") ;
 
