@@ -38,8 +38,6 @@ use Config::Model::Tk::NodeEditor ;
 
 use Config::Model::Tk::Wizard ;
 
-our $VERSION = '1.306' ;
-
 Construct Tk::Widget 'ConfigModelUI';
 
 my $cust_img ;
